# giinn_score

./: .env.example  .gitignore  CLAUDE.md  README.md  kokkai_fetcher.py  mock_data.py  pyproject.toml  qa_extractor.py  test_extractor.py
.claude/: settings.local.json
.github/workflows/: daily.yml  test.yml
src/: batch_score.py  daily_pipeline.py  evaluator.py  kokkai_fetcher.py  master_manager.py  models.py  qa_extractor.py  scorer.py  web_server.py  x_publisher.py
tests/: conftest.py  mock_data.py  test_evaluator.py  test_extractor.py  test_fetcher.py  test_pipeline.py  test_publisher.py  test_scorer.py
